istio/helloworld/nginx2_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx2-service
 labels:
   app: nginx2-test
spec:
 selector:
   app: nginx2-test
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
 type: NodePort
