istio/helloworld/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 labels:
   app: nginx-test
spec:
 selector:
   app: nginx-test
 ports:
   - protocol: TCP
     port: 80
     targetPort: 80
 type: NodePort
