istio/helloworld/vs2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx2-virtualservice
spec:
  hosts:
  - "test2.istio.com"
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: nginx2-service.default.svc.cluster.local
        port:
          number: 80
